--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
           <img class="june-images" src="images/<%= haikus[i].image %>" />
           <div class="haikus-container">
             <p class="haikus">
-              <%- haikus[i].haiku %>
+              <%- haikus[i].text %>
             </p>
             <div class="flex justify-center space-x-4 mt-8">
               <a href="#" id="<%= haikus[i].id %>" class="heart block w-16 h-16 bg-gray-200 hover:bg-gray-300 rounded-full flex flex-col justify-center items-center">
